# versionize-backend

./: docker-compose.yml
bff/: Dockerfile  README.md  __main__.py  pyproject.toml
bff/src/: app.py  dependencies.py  enums.py  middleware.py
bff/src/adapters/: auth.py  base.py  projects.py
bff/src/config/: logging.py  settings.py
bff/src/domain/: __init__.py  base.py  company.py  document.py  notification.py  project.py  remark.py  remark_doc.py  s3.py  section.py  tools.py  user.py
bff/src/entrypoints/: documents.py  identity.py  notifications.py  projects.py  reviewer.py  router.py  service.py
bff/src/service/: auth.py
bff/tests/fixtures/: factories.py  service_adapters.py
bff/tests/unit/: test_read_service_adapters.py
documents/: Dockerfile  (+4 more)
projects/: Dockerfile  README.md  __main__.py  pyproject.toml
projects/alembic/: env.py
projects/alembic/versions/: 2025_10_25_1150-2eb3184ca6f3_initial.py  2025_10_27_1143-31862dd732e4_init.py  2025_10_27_1257-1479e8344c5d_unnecessary_fields.py  2025_11_26_1256-bc7b4bc420aa_add_timezones_to_projects.py  2025_12_02_1448-e4ceef7f5f98_timestamps.py
projects/src/: app.py  dependencies.py  enums.py  middleware.py  provider.py  read_app.py  write_app.py
projects/src/adapters/: orm.py
projects/src/config/: logging.py  settings.py
projects/src/domain/: company.py  default_section.py  project.py  section.py  user.py
projects/src/entrypoints/: default_sections.py  projects.py  router.py  sections.py  service.py
projects/src/service/: auth.py  base.py  default_section.py  project.py  section.py  uow.py
(+185 files in other folders)
